# oxide-motive

./: Cargo.toml  Cross.toml  LICENSE  README.md  architecture.md  clippy.toml  diagram.md
.cargo/: config.toml
.github/workflows/: firmware_ci.yml  host_arm_ci.yml  math_size_check.yml  workspace_ci.yml
docs/: book.toml
mqtt-async-embedded/: Cargo.toml
mqtt-async-embedded/src/: lib.rs
oxide-cloud/: Cargo.toml
oxide-cloud/src/: main.rs
oxide-control/: Cargo.toml
oxide-control/src/: autotuner.rs  lib.rs  pid.rs  smc.rs
oxide-core/: Cargo.toml  build.rs
oxide-core/src/: lib.rs
oxide-esp32-hmi/: Cargo.toml
oxide-esp32-hmi/src/: lib.rs
oxide-esp32-host/: Cargo.toml
oxide-esp32-host/src/: main.rs
oxide-firmware/: Cargo.toml  build.rs  hardware.toml  memory.x  memory_maps.rs
oxide-firmware/.cargo/: config.toml
oxide-firmware/src/: bootloader.rs  knock.rs  lib.rs  limp_mode.rs  main.rs  math_engine.rs  memory_maps.rs  rtic_app.rs  scheduler.rs  trigger_decoder.rs
oxide-firmware/src/hal_impl/: alif_m55.rs  mod.rs  nordic.rs  nxp.rs  qspi.rs  renesas_ra8.rs  stm32.rs  transport_serial.rs  transport_usb.rs
oxide-firmware/src/storage/: mod.rs
oxide-firmware/tests/: memory_layout.rs
oxide-hal/: Cargo.toml
oxide-hal/src/: adc.rs  can.rs  engine_timer.rs  flash.rs  lib.rs  mock.rs  nxp_s32k.rs  peak_and_hold_pwm.rs  pwm.rs  stm32g4.rs  stm32h7.rs  timer.rs  transport.rs  watchdog.rs
oxide-hmi/: Cargo.toml  build.rs  hmi.slint
oxide-hmi/src/: lib.rs
oxide-host/: Cargo.toml
oxide-host/src/: config.rs  ipc.rs  lib.rs  logger.rs  main.rs  ota.rs  sensors.rs  tuning.rs
oxide-host/src/connectivity/: ble.rs  mqtt.rs
oxide-host/src/diagnostics/: uds.rs
oxide-host/src/gateway/: mod.rs
oxide-host/src/platform/: device_tree.rs  discovery.rs  display.rs  gpio.rs  mod.rs
oxide-host/src/ui/: dashboard.slint  main.rs
oxide-math/: Cargo.toml
oxide-math/benches/: fpu_bench.rs
oxide-math/src/: lib.rs
oxide-math/src/estimation/: mod.rs  ukf.rs
oxide-mp1/: Cargo.toml
oxide-mp1/src/: a7_app.rs  main.rs
oxide-ota/: Cargo.toml
oxide-ota/src/: lib.rs
oxide-protocol/: Cargo.toml
oxide-protocol/benches/: clock_sync.rs  clock_sync_bench.rs  clock_sync_benchmark.rs
oxide-protocol/src/: clock_sync.rs  framing.rs  lib.rs
oxide-sim/host/: Cargo.toml
oxide-sim/host/src/: main.rs
oxide-sim/mcu/: Cargo.toml
oxide-sim/mcu/src/: engine.rs  main.rs
oxide-sim/src/: lib.rs
oxide-sim/tests/: integration_test.rs
oxide-telemetry/: Cargo.toml
oxide-telemetry/src/: lib.rs
oxide-uds/: Cargo.toml
oxide-uds/src/: lib.rs
redox/oxide-core/: Cargo.toml
redox/oxide-core/src/: main.rs
redox/oxide-firmware/: Cargo.toml  build.rs  hardware.toml  memory.x
redox/oxide-firmware/.cargo/: config.toml
redox/oxide-firmware/src/: main.rs  scheduler.rs  trigger_decoder.rs
redox/oxide-firmware/src/hal_impl/: mod.rs  qspi.rs  transport_serial.rs
redox/oxide-firmware/src/io/: mod.rs
redox/oxide-firmware/src/limp_mode/: mod.rs
redox/oxide-firmware/src/scheduler/: mod.rs
redox/oxide-firmware/src/storage/: mod.rs
redox/oxide-firmware/src/transport/: mod.rs
redox/oxide-firmware/src/trigger_decoder/: mod.rs
redox/oxide-firmware/tests/: memory_layout_test.rs
redox/oxide-hal/: Cargo.toml
redox/oxide-hal/src/: flash.rs  lib.rs  transport.rs
redox/oxide-host/: Cargo.toml  build.rs
redox/oxide-host/src/: main.rs  tuning.rs
redox/oxide-host/src/actuators/: mod.rs
redox/oxide-host/src/compensation/: mod.rs
redox/oxide-host/src/connectivity/: mod.rs
redox/oxide-host/src/connectivity/ble/: mod.rs
redox/oxide-host/src/connectivity/lte/: mod.rs
redox/oxide-host/src/connectivity/mqtt/: mod.rs
redox/oxide-host/src/diagnostics/: mod.rs
redox/oxide-host/src/diagnostics/dtc/: mod.rs
redox/oxide-host/src/diagnostics/uds/: mod.rs
redox/oxide-host/src/sensors/: mod.rs
redox/oxide-host/src/tuning/: mod.rs
redox/oxide-host/src/ui/: dashboard.slint  main.rs  mod.rs
redox/oxide-host/src/virtual_sensors/: mod.rs
redox/oxide-logger/: Cargo.toml
redox/oxide-logger/src/: main.rs
redox/oxide-math/: Cargo.toml
redox/oxide-math/src/: lib.rs
redox/oxide-math/tests/: math_test.rs
redox/oxide-protocol/: Cargo.toml
redox/oxide-protocol/src/: clock_sync.rs  framing.rs  lib.rs
redox/oxide-protocol/tests/: clock_sync.rs  framing.rs
redox/oxide-sim/: Cargo.toml
redox/oxide-sim/host/: Cargo.toml
redox/oxide-sim/host/src/: main.rs
redox/oxide-sim/mcu/: Cargo.toml
redox/oxide-sim/mcu/src/: main.rs
redox/oxide-sim/tests/: integration_test.rs
redox/oxide-telemetry/: Cargo.toml
redox/oxide-telemetry/src/: main.rs
redox/recipes-oxide/oxide-motive-host/: recipe.toml
scripts/: check.sh
slintcn/: Cargo.toml
slintcn/src/: lib.rs
tests/: compile_test.rs  integration_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
