[workspace]
members = [
    "oxide-protocol",
    "oxide-firmware",
    "oxide-host",
    "oxide-hal",
    "oxide-math",
    "oxide-mp1",
    "oxide-esp32-host", # Added oxide-esp32-host to workspace members
]

[workspace.dependencies]
heapless = "0.8"
postcard = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
rtic = "2.1"
cortex-m-rtic = "2.1"