[workspace]
members = [
    "oxide-protocol",
    "oxide-firmware",
    "oxide-host",
    "oxide-hal",
    "oxide-math",
    "oxide-mp1",
    "oxide-esp32-host",
    "oxide-core",
    "mqtt-async-embedded",
    "oxide-telemetry",
    "oxide-hmi",
    "slintcn",
    "oxide-esp32-hmi",
    "oxide-cloud",
    "oxide-ota",
    "oxide-uds",
]

[workspace.dependencies]
heapless = "0.8"
postcard = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
rtic = "2.1"
cortex-m-rtic = "2.1"
embassy-executor = "0.5.0"
embassy-sync = "0.5.0"
embassy-time = "0.3.0"
embedded-io-async = "0.6.1"
slint = "1.5"
cobs = "0.2.3"
serde-json-core = "0.5.1"
ed25519-dalek = "2.1.0"
esp-idf-hal = "0.42.5"
esp-idf-svc = "0.47.3"
actix-web = "4"
surrealdb = { version = "1.0.0-beta.9", features = ["raw"] }
actix-rt = "2"
reqwest = "0.11"
clap = { version = "4.4.18", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"