[workspace]
resolver = "2"
members = [
    "oxide-protocol",
    "oxide-firmware",
    "oxide-host",
    "oxide-hal",
    "oxide-math",
    "oxide-control",
    "oxide-mp1",
    "oxide-esp32-host",
    "oxide-core",
    "mqtt-async-embedded",
    "oxide-telemetry",
    "oxide-hmi",
    "slintcn",
    "oxide-esp32-hmi",
    "oxide-cloud",
    "oxide-ota",
    "oxide-uds",
]

[workspace.dependencies]
heapless = "0.9.3"
postcard = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
rtic = "2.1"
cortex-m-rtic = "1.1.4"
nalgebra = { version = "0.35.0", default-features = false }
embassy-executor = "0.10.0"
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
embedded-io-async = "0.7.0"
slint = "1.5"
cobs = "0.5.1"
serde-json-core = "0.6.0"
ed25519-dalek = { version = "2.1.0", features = ["digest"] }
esp-idf-hal = "0.46.2"
esp-idf-svc = "0.52.1"
actix-web = "4"
surrealdb = { version = "3.2.0" }
actix-rt = "2"
reqwest = "0.13.4"
clap = { version = "4.4.18", features = ["derive"] }
sha2 = { version = "0.11.0", default-features = false }
defmt = "1.1.1"
defmt-rtt = "1.3.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
