[package]
name = "oxide-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
surrealdb = { version = "1.0.0-beta.9", features = ["raw"] }
oxide-core = { path = "../oxide-core" }

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"