[package]
name = "oxide-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, default-features = false, features = ["derive"] }
postcard = { workspace = true, features = ["alloc"] }
heapless = { workspace = true, features = ["serde"] }

[build-dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
std = ["serde/std", "postcard/std"]
default = []
