[package]
name = "oxide-esp32-host"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-hal = { workspace = true }
esp-idf-sys = { version = "0.37.2", features = ["binstart"] }
esp-idf-svc = { workspace = true }
log = { version = "0.4.17" }
anyhow = "1.0.69"
oxide-protocol = { path = "../oxide-protocol" }

[features]
default = ["std"]
std = ["esp-idf-hal/std", "esp-idf-sys/std", "esp-idf-svc/std"]
