[package]
name = "oxide-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
oxide-protocol = { path = "../oxide-protocol" }
oxide-hal = { path = "../oxide-hal" }
oxide-math = { path = "../oxide-math" }
heapless = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }

# RTIC and Cortex-M specific
rtic = { workspace = true }
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = { workspace = true }
# For STM32H7xx-HAL
stm32h7xx-hal = { version = "0.16", features = ["stm32h743v", "rt"] }
# For panic handling
panic-halt = "0.2"

[features]
# Conditional compilation for different MCU families
stm32h7 = ["stm32h7xx-hal"]
# nxp_s32k = ["s32k-hal"] # Placeholder for NXP S32K HAL
# renesas_ra = ["renesas-ra"] # Placeholder for Renesas RA HAL

# Default feature for building
default = ["stm32h7"]

[profile.release]
codegen-units = 1 # Better optimizations
debug = true # Embed debug info
lto = true # Link-time optimization
