[package]
name = "oxide-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
oxide-protocol = { path = "../oxide-protocol" }
oxide-hal = { path = "../oxide-hal" }
oxide-math = { path = "../oxide-math" }
heapless = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }

# RTIC and Cortex-M specific
rtic = { workspace = true }
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = { workspace = true }

# For panic handling
panic-halt = "0.2"

# Vendor HALs - as optional dependencies
stm32f4xx-hal = { version = "0.20", optional = true, features = ["rt"] }
stm32g4xx-hal = { version = "0.0.8", optional = true, features = ["rt"] }
stm32h7xx-hal = { version = "0.16", optional = true, features = ["stm32h750v", "rt"] }
stm32u5xx-hal = { version = "0.3", optional = true, features = ["rt"] }
lpc55-hal = { version = "0.10.0", optional = true }
nrf9160-hal = { version = "0.18.0", optional = true }
renesas-ra = { version = "0.2.0", optional = true }


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
quote = "1.0"
std = "1.0"

[features]
# MCU families
stm32f4 = ["stm32f4xx-hal"]
stm32g4 = ["stm32g4xx-hal"]
stm32h7 = ["stm32h7xx-hal"]
stm32u5 = ["stm32u5xx-hal"]
lpc55 = ["lpc55-hal"]
nrf91 = ["nrf9160-hal"]
renesas_ra8 = ["renesas-ra"]


# Default feature for building
default = []

[profile.release]
codegen-units = 1 # Better optimizations
debug = true # Embed debug info
lto = true # Link-time optimization