[package]
name = "oxide-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
oxide-protocol = { path = "../oxide-protocol" }
oxide-hal = { path = "../oxide-hal" }
oxide-math = { path = "../oxide-math" }
heapless = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }

# RTIC and Cortex-M specific
rtic = { workspace = true }
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }

# For panic handling
panic-halt = "1.0.0"

# Vendor HALs - as optional dependencies
stm32f4xx-hal = { version = "0.23.0", optional = true }
stm32g4xx-hal = { version = "0.1.0", optional = true, features = ["rt"] }
stm32h7xx-hal = { version = "0.16", optional = true, features = [
    "stm32h750v",
    "rt",
] }
lpc55-hal = { version = "0.5.0", optional = true }
nrf9160-hal = { version = "0.18.0", optional = true }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
quote = "1.0"

[features]
# MCU families
stm32f4 = ["stm32f4xx-hal"]
stm32g4 = ["stm32g4xx-hal"]
stm32h7 = ["stm32h7xx-hal"]
lpc55 = ["lpc55-hal"]
nrf91 = ["nrf9160-hal"]

# Default feature for building
default = []

[profile.release]
codegen-units = 1 # Better optimizations
debug = true      # Embed debug info
lto = true        # Link-time optimization
