[package]
name = "oxide-host"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-protocol = { path = "../oxide-protocol" }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
heapless = { workspace = true }
cobs = { workspace = true }
