[package]
name = "oxide-host"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.5", default-features = false, features = ["std", "backend-linuxkms", "renderer-skia-opengl"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
postcard = "1.0"
serialport = "4.2"
anyhow = "1.0"
crc32fast = "1.3"
heapless = "0.7"
drm = "0.11"
drm-ffi = "0.4"
gbm = "0.14"
gpiod = "0.3"

[build-dependencies]
slint-build = "1.5"