[package]
name = "oxide-math"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, optional = true }
heapless = { workspace = true, optional = true }

[dev-dependencies]
divan = "0.1.4"

[features]
std = ["serde/std", "heapless/serde"]
default = []

[[bench]]
name = "fpu_bench"
harness = false
