[package]
name = "oxide-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, default-features = false, features = ["derive"] }
postcard = { workspace = true, features = ["alloc"] }
heapless = { workspace = true, features = ["serde"] }
cobs = { version = "0.2", default-features = false } # For COBS framing
# Add `alloc` feature for `heapless::Vec` if needed in `no_std` context
# For `no_std` with `alloc` features, you usually need a global allocator.
# However, for `heapless::Vec`, it's typically used on the stack or in static memory.
# The `serde` feature for heapless is needed for serialization.

[dev-dependencies]
divan = "0.1.13"

[features]
std = ["serde/std", "postcard/use-std"] # Enable std features for testing/host
default = [] # No std by default for no_std compatibility

[[bench]]
name = "clock_sync_benchmark"
harness = false
