[package]
name = "oxide-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-core = { path = "../oxide-core" }
mqtt-async-embedded = { path = "../mqtt-async-embedded" }
embassy-executor = "0.5.0"
embassy-sync = "0.5.0"
embedded-io-async = "0.6.1"
cobs = "0.2.3"
postcard = "1.0"
serde-json-core = "0.5.1"

[features]
default = []