[package]
name = "oxide-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-core = { path = "../oxide-core" }
mqtt-async-embedded = { path = "../mqtt-async-embedded" }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embedded-io-async = { workspace = true }
cobs = { workspace = true }
postcard = { workspace = true }
serde-json-core = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }

[features]
default = []
