[package]
name = "oxide-uds"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-core = { path = "../oxide-core" }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
mqtt-async-embedded = { path = "../mqtt-async-embedded" }
defmt = { workspace = true }
defmt-rtt = { workspace = true }

[features]
default = []