[package]
name = "oxide-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-hal = { path = "../oxide-hal" }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32h743v-ext", "memory-x", "time-driver-any", "exti"] }
embassy-executor = { version = "0.5.0", features = ["defmt", "task-arena-size-32768", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
heapless = "0.8"
postcard = { version = "1.0", features = ["use-std"] }
cobs = "0.2.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.82"
quote = "1.0.36"
proc-macro2 = "1.0.81"
toml = "0.8.12"
